styles.scss
$enable-responsive-font-sizes: true;
@import "~bootstrap/scss/bootstrap.scss";

$danger-color: #dc3545;
@import "vendor/creative-tim/scss/paper-dashboard.scss";

// Reset .input-group-text styles closer to Bootstrap defaults
.form-group .input-group-prepend .input-group-text,
.form-group .input-group-append .input-group-text,
.input-group .input-group-prepend .input-group-text,
.input-group .input-group-append .input-group-text {
  padding: 10px;
}
.input-group-append .input-group-text,
.input-group-prepend .input-group-text {
  background-color: #e9ecef;
}
.input-group .form-control:not(:first-child):not(:last-child),
.input-group-btn:not(:first-child):not(:last-child) {
  border-left: 1px solid #dddddd;
}
.input-group .form-control:not(:first-child):not(:last-child):focus,
.input-group-btn:not(:first-child):not(:last-child):focus {
  border-left: 1px solid #9a9a9a;
}
.input-group .form-control:not(:first-child):not(:last-child).is-invalid,
.input-group-btn:not(:first-child):not(:last-child).is-invalid {
  border-left: 1px solid #dc3545;
}
.input-group .form-control:last-child,
.input-group-btn:last-child > .dropdown-toggle,
.input-group-btn:first-child > .btn:not(:first-child) {
  border-left: 1px solid #dddddd;
}
.input-group .form-control:last-child:focus,
.input-group-btn:last-child:focus > .dropdown-toggle,
.input-group-btn:first-child:focus > .btn:not(:first-child) {
  border-left: 1px solid #9a9a9a;
}
.input-group .form-control:last-child.is-invalid,
.input-group-btn:last-child.is-invalid > .dropdown-toggle,
.input-group-btn:first-child.is-invalid > .btn:not(:first-child) {
  border-left: 1px solid #dc3545;
}

// Fix .form-check-input bugs
.form-check input[type="checkbox"],
.form-check-radio input[type="radio"] {
  opacity: 1;
  visibility: visible;
}
.form-check .form-check-label {
  padding-left: 20px;
}

// Fix pointer on a.dropdown-item
a.dropdown-item {
  cursor: pointer;
}

// Reset .card label
.card label {
  font-size: 1rem;
  margin-bottom: 0.5rem;
  color: #252422;
}

// Reset .form-text
.form-text {
  font-size: 80%;
}

// Reset .btn-link
.btn-link,
.btn.btn-link {
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  text-transform: none;
  margin: inherit;
  color: $link-color;
  text-decoration: $link-decoration;
  border: none;
  padding: $padding-base-vertical $padding-base-horizontal;
  background-color: $transparent-bg !important;


  @include hover {
    color: $link-hover-color !important;
    text-decoration: $link-hover-decoration;
    background-color: $transparent-bg !important;
  }

  &:focus,
  &.focus {
    text-decoration: $link-hover-decoration;
    box-shadow: none;
    color: $link-hover-color !important;
    background-color: $transparent-bg !important;
  }

  &:disabled,
  &.disabled {
    color: $btn-link-disabled-color;
    pointer-events: none;
    background-color: $transparent-bg !important;
  }

  &.text-danger {
    color: $danger-color !important;
  }
}

// Reset .content
.main-panel > .content {
  min-height: 0;
}

// Fix sidebar page markers
@media screen and (min-width: 992px){
  .sidebar{
    .sidebar-wrapper{
      li.active{
        > a:not([data-toggle="collapse"]),
        > [data-toggle="collapse"] + div .nav li {
          &:before{
            right: -15px;
          }

          &:after{
            right: -15px;
          }
        }
      }
    }
  }
}

